objects/Account/fields/ActiveContacts__c.field-meta.xml
<CustomField>
    <fullName>ActiveContacts__c</fullName>
    <label>ActiveContacts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>