objects/Account/fields/Avg_Case_Resolution_days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Case_Resolution_days__c</fullName>
    <label>Avg case resolution days</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>