objects/Account/fields/Customer_Area__c.field-meta.xml
<CustomField>
    <fullName>Customer_Area__c</fullName>
    <description>Area of customer</description>
    <label>Customer Area</label>
    <length>3</length>
    <type>Text</type>
</CustomField>