objects/Account/validationRules/Phone_digit_count.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_digit_count</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Phone ) &lt;&gt; 14</errorConditionFormula>
    <errorMessage>Phone number must have only 10 digits</errorMessage>
</ValidationRule>