objects/Account/validationRules/Phone_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_or_Email</fullName>
    <active>false</active>
    <description>Customer account should have either the phone number or Email</description>
    <errorConditionFormula>AND( ISBLANK( Customer_Email__c ) , ISBLANK( Phone ) )</errorConditionFormula>
    <errorMessage>Account must have either Phone Number or Email ID</errorMessage>
</ValidationRule>